--- a/core/templates/ago.html
+++ b/core/templates/ago.html
@@ -64,13 +64,13 @@ Dependencia para asumir gastos corrientes {{ municipio }}
                         {% for row in porclasep %}
                         <tr>
                             <td>{{ row.clasificacion }}</td>
-                            <td class="text-right">{% if row.inicial_asignado %}{{ row.inicial_asignado|floatformat:2 }}{% else %} 0 {% endif %}</td>
+                            <td class="text-right">{% if row.asignado %}{{ row.asignado|floatformat:2 }}{% else %} 0 {% endif %}</td>
                             <td class="text-right">{% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }} {% else %} 0 {% endif %}</td>
                         </tr>
                         {% endfor %}
                         <tr class="success">
                             <td><strong>TOTAL</strong></td>
-                            <td class="text-right"><strong>{{ porclasep|total_sum:'inicial_asignado'|floatformat:2 }}</strong></td>
+                            <td class="text-right"><strong>{{ porclasep|total_sum:'asignado'|floatformat:2 }}</strong></td>
                             <td class="text-right"><strong>{{ porclasep|total_sum:'ejecutado'|floatformat:2 }}</strong></td>
                         </tr>
                     </table>
@@ -92,13 +92,13 @@ Dependencia para asumir gastos corrientes {{ municipio }}
                         <tr>
                         {% endif %}
                             <td>{{ row.nombre }}</td>
-                            <td class="text-right">{{ row.inicial_asignado|floatformat:2 }}%</td>
+                            <td class="text-right">{{ row.asignado|floatformat:2 }}%</td>
                             <td class="text-right">{{ row.ejecutado|floatformat:2 }}%</td>
                         </tr>
                     {% endfor %}
                     <tr class="success">
                         <td>TOTAL</td>
-                        <td>{{ otros|total_sum:'inicial_asignado'|floatformat:2 }}</td>
+                        <td>{{ otros|total_sum:'asignado'|floatformat:2 }}</td>
                         <td>{{ otros|total_sum:'ejecutado'|floatformat:2 }}</td>
                     </tr>
                 </table>
