--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -207,6 +207,10 @@
 
     <script type="text/javascript">
         $('select').select2({
+            ajax: {
+                url: "http://example.org/api/test",
+                cache: true
+            }
         });
         $(document).ready(function() {
             $(".listado-municipios").select2({
