--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -9,37 +9,47 @@
 {% endblock %}
 
 {% block main_table %}
-    <table class="table table-striped table-hover">
+    <table class="table">
         <thead>
         <tr class="bg-primary">
-            <th>Rubros de ingresos</th>
-            {% if periodo_list|keyvalue:year == 'I' %}
-                <th class="text-right">Inicial</th>
-            {% else %}
-                <th class="text-right">Ejecutado</th>
-            {% endif %}
+            <th rowspan="2" colspan="1" style="vertical-align: middle">Rubros de ingresos</th>
+            <th rowspan="1" colspan="2" style="border-bottom: none;" class="text-center">
+                {% if periodo_list|keyvalue:year == 'I' %}
+                    Inicial
+                {% else %}
+                    Ejecutado
+                {% endif %}
+            </th>
+        </tr>
+        <tr class="bg-primary">
+            <th colspan="1" style="border-top: none;" class="text-right">Cordobas</th>
+            <th colspan="1" style="border-top: none;" class="text-right">Porcentaje</th>
         </tr>
         </thead>
         {% for row in rubros %}
             <tr>
                 {% if periodo_list|keyvalue:year == 'I' and row.inicial_asignado > 0 %}
-                    <td>{{ row.subsubtipoingreso__origen__nombre }}</td>
-                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                    <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}</td>
+                    <td colspan="1" class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                    <td colspan="1" class="text-right">{{ row.inicial_asignado_percent }}</td>
                 {% else %}
                     {% if row.ejecutado > 0 %}
-                        <td>{{ row.subsubtipoingreso__origen__nombre }}</td>
-                        <td class="text-right">{{ row.ejecutado|million|intcomma|default:"0" }}</td>
+                        <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}</td>
+                        <td colspan="1" class="text-right">{{ row.ejecutado|million|intcomma|default:"0" }}</td>
+                        <td colspan="1" class="text-right">{{ row.ejecutado_percent }}</td>
                     {% endif %}
                 {% endif %}
             </tr>
         {% endfor %}
         <tfoot>
         <tr class="">
-            <td>TOTAL</td>
+            <td colspan="1">TOTAL</td>
             {% if periodo_list|keyvalue:year == 'I' %}
-                <td class="text-right">{{ asignado|million|intcomma }}</td>
+                <td colspan="1" class="text-right">{{ asignado|million|intcomma }}</td>
+                <td colspan="1" class="text-right">{{ asignado_porcentaje|floatformat:"0" }}</td>
             {% else %}
-                <td class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                <td colspan="1" class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                <td colspan="1" class="text-right">{{ ejecutado_porcentaje|floatformat:"0" }}</td>
             {% endif %}
         </tr>
         </tfoot>
