--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -12,7 +12,7 @@
                 <div class="chart-update col-lg-1 col-md-1 col-sm-1 col-xs-1 mt-0">
                     <ul class="nav nav-tabs tabs-left sideways" role="tablist">
                         <li class="active">
-                            <a href="#home" aria-controls="home" role="tab"
+                            <a href="#icons" aria-controls="icons" role="tab"
                                data-toggle="tab">
                                   <span class="pma-icon fa fa-info-circle pma-fg-gray"
                                         aria-hidden="true" id="chart-bubble-1"
@@ -21,7 +21,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#profile" aria-controls="profile" role="tab"
+                            <a href="#pie" aria-controls="pie" role="tab"
                                data-toggle="tab">
                                 <span id="chart-pie-1"
                                       class="pma-icon pe-7s-graph pma-fg-gray"
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
+                            <a href="#bar" aria-controls="bar" role="tab" data-toggle="tab">
                                  <span id="chart-bar-1"
                                        class="pma-icon pe-7s-graph3 pma-fg-gray"
                                        data-chartcontainer="bar">
@@ -38,7 +38,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">
+                            <a href="#table_" aria-controls="table_" role="tab" data-toggle="tab">
                                     <span id="table"
                                           class="pma-icon fa fa-table pma-fg-gray"
                                           data-chartcontainer="table">
@@ -50,7 +50,7 @@
                 <div class="col-lg-10 col-md-10 col-sm-11 col-xs-11">
                     <!-- Tab panes -->
                     <div class="tab-content">
-                        <div class="tab-pane pma-summary pma-index-inversion-icons  " id="home">
+                        <div class="tab-pane pma-summary pma-index-inversion-icons active" id="icons">
                             <div class="row categorias_inversion">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     {% for i in bubble_data_nojson.children %}
@@ -71,13 +71,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane" id="profile">
+                        <div class="tab-pane" id="pie">
                             <div id="pie" class="view-alternative"> Chart will be rendered here</div>
                         </div>
-                        <div class="tab-pane" id="messages">
+                        <div class="tab-pane" id="bar">
                             <div id="bar" class="view-alternative"> Chart will be rendered here</div>
                         </div>
-                        <div class="tab-pane active" id="settings">
+                        <div class="tab-pane" id="table_">
                             <table class="table table-striped table-hover">
                                 <thead>
                                 <tr class="bg-primary">
@@ -89,7 +89,9 @@
                                     {% endif %}
                                 </tr>
                                 <tr class="bg-primary">
-                                    <th rowspan="1" colspan="1" class="text-center no-border-top">M. de C&oacute;rdobas</th>
+                                    <th rowspan="1" colspan="1" class="text-center no-border-top">M. de
+                                        C&oacute;rdobas
+                                    </th>
                                     <th rowspan="1" colspan="1" class="text-center no-border-top">%</th>
                                 </tr>
                                 </thead>
@@ -98,10 +100,12 @@
                                     <tr>
                                         <td colspan="1" class="text-left">{{ row.catinversion__nombre }}</td>
                                         {% if periodo_list|keyvalue:year == 'I' %}
-                                            <td colspan="1" class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
+                                            <td colspan="1"
+                                                class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
                                             <td colspan="1" class="text-center"></td>
                                         {% else %}
-                                            <td colspan="1" class="text-center">{{ row.ejecutado|million|intcomma }}</td>
+                                            <td colspan="1"
+                                                class="text-center">{{ row.ejecutado|million|intcomma }}</td>
                                             <td colspan="1" class="text-center"></td>
                                         {% endif %}
                                     </tr>
@@ -114,7 +118,8 @@
                                         <td colspan="1" class="text-right">{{ asignado|million|intcomma }}</td>
                                         <td colspan="1" class="text-right"></td>
                                     {% else %}
-                                        <td colspan="1" class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                                        <td colspan="1"
+                                            class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
                                         <td colspan="1" class="text-right"></td>
                                     {% endif %}
                                 </tr>
@@ -217,11 +222,19 @@
                                 <tr class="pma-bg-white">
                                     <td>{{ row.clasificacion }}</td>
                                     <td class="tex-center">
-                                        {% if row.asignado %}{{ row.asignado|floatformat:2 }}{% else %}
-                                            0 {% endif %}</td>
+                                        {% if row.asignado %}
+                                            {{ row.asignado|floatformat:2 }}
+                                        {% else %}
+                                            0
+                                        {% endif %}
+                                    </td>
                                     <td class="text-right">
-                                        {% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }} {% else %}
-                                            0 {% endif %}</td>
+                                        {% if row.ejecutado %}
+                                            {{ row.ejecutado|floatformat:2 }}
+                                        {% else %}
+                                            0
+                                        {% endif %}
+                                    </td>
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -325,6 +338,7 @@
                                 {% else %}
                                     <th class="text-center"><strong>Ejecuci&oacute;n</strong></th>
                                 {% endif %}
+                                <th class="text-center"><strong>%</strong></th>
                             </tr>
                             </thead>
                             <tbody>
@@ -335,8 +349,10 @@
                                         <td>{{ row.inversion__municipio__nombre }}</td>
                                         {% if row.inversion__periodo == 'I' %}
                                             <td class="text-right">{{ row.asignado_percent|intcomma }}</td>
+                                            <td class="text-right"></td>
                                         {% else %}
                                             <td class="text-right">{{ row.ejecutado_percent|intcomma }}</td>
+                                            <td class="text-right"></td>
                                         {% endif %}
                                     </tr>
                                 {% endfor %}
@@ -347,8 +363,10 @@
                                         <td>{{ row.inversion__municipio__nombre }}</td>
                                         {% if row.ingreso__periodo == 'I' %}
                                             <td class="text-right">{{ row.asignado_percent|intcomma }}</td>
+                                            <td class="text-right"></td>
                                         {% else %}
                                             <td class="text-right">{{ row.ejecutado_percent|intcomma }}</td>
+                                            <td class="text-right"></td>
                                         {% endif %}
                                     </tr>
                                 {% endfor %}
