--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,163 +40,170 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/tooltip.js' %}"></script>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-68619423-1', 'auto');
-    ga('send', 'pageview');
+        ga('create', 'UA-68619423-1', 'auto');
+        ga('send', 'pageview');
 
     </script>
     {% block head_extra %}
     {% endblock %}
-  </head>
+</head>
 <!-- NAVBAR
 ================================================== -->
 <body>
-    <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4 pull-left logo">
-                    <h1><span class="text-azul">Presupuestos Municipales</span><br />
-                        <span class="text-aqua"> Abiertos</span>
-                    </h1>
-                </div>
-                <nav class="navbar navbar-toggleable-md fixed-top text-right">
-                    {% include "menu.html"%}
-                </nav>
+<header>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 pull-left logo">
+                <h1><span class="text-azul">Presupuestos Municipales</span><br/>
+                    <span class="text-aqua"> Abiertos</span>
+                </h1>
             </div>
+            <nav class="navbar navbar-toggleable-md fixed-top text-right">
+                {% include "menu.html" %}
+            </nav>
         </div>
-        {% comment %}
+    </div>
+    {% comment %}
         <nav class="navbar navbar-toggleable-md fixed-top">
             {% include "menu.html"%}
         </nav>
         {% endcomment %}
-    </header>
-    <!-- Carousel
-    ================================================== -->
-    {% block slide_portada %}
-    {% endblock %}
-    
-    <!--Buscador Portada --> 
-    {% block buscador_portada %}                                                   
-    {% endblock %}
-    
-    <section id="main">
-        <div class="container-fluid buscador">
-            {% block main_content %}
-            {% endblock %}
-        </div>
-    </section>
-    {% block inversiones_portada %}
-    {% endblock %}
-    <!-- FOOTER -->
-    <footer id="footer">
-        <div class="row">
-            <div class="container">
-                <div class="col-md-6 contacto">
-                    <p>Contactenos</p>
-                    <i class="fa fa-phone" aria-hidden="true"> (505) 0000-000</i><br />
-                    <i class="fa fa-envelope" aria-hidden="true">info@empresa.org</i><br />
-                    <i class="fa fa-map-marker" aria-hidden="true"> Managua Nicaragua</i><br />
-                </div>
-                <p class="pull-right logos" style="margin-right: 25px;">
-                    <a href="#"><img src="{% static 'img/aid.png' %}" alt="USAID"/ width="120" ></a>
-                    <a href="#"><img src="{% static 'img/logoguegue.png' %}" alt="Guegue" width="140"/></a>
-                    <a href="#"><img src="{% static 'img/gcom.png' %}" alt="Global communities" width="140" /></a>
-                </p>
+</header>
+<!-- Carousel
+================================================== -->
+{% block slide_portada %}
+{% endblock %}
+
+<!--Buscador Portada -->
+{% block buscador_portada %}
+{% endblock %}
+
+<section id="main">
+    <div class="container-fluid buscador">
+        {% block main_content %}
+        {% endblock %}
+    </div>
+</section>
+{% block inversiones_portada %}
+{% endblock %}
+<!-- FOOTER -->
+<footer id="footer">
+    <div class="row">
+        <div class="container">
+            <div class="col-md-6 contacto">
+                <p>Contactenos</p>
+                <i class="fa fa-phone" aria-hidden="true"> (505) 0000-000</i><br/>
+                <i class="fa fa-envelope" aria-hidden="true">info@empresa.org</i><br/>
+                <i class="fa fa-map-marker" aria-hidden="true"> Managua Nicaragua</i><br/>
             </div>
+            <p class="pull-right logos" style="margin-right: 25px;">
+                <a href="#"><img src="{% static 'img/aid.png' %}" alt="USAID"/ width="120" ></a>
+                <a href="#"><img src="{% static 'img/logoguegue.png' %}" alt="Guegue" width="140"/></a>
+                <a href="#"><img src="{% static 'img/gcom.png' %}" alt="Global communities" width="140"/></a>
+            </p>
         </div>
-    </footer>
+    </div>
+</footer>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/docs.min.js' %}"></script>
-    <!-- script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script -->
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-    <!-- <script src="http://code.highcharts.com/4.1.1/highcharts-3d.js"></script> -->
-	<!-- Empieza el slider. Tomado de http://bootsnipp.com -->
-    <script type="text/javascript">
-(function( $ ) {
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="{% static 'js/docs.min.js' %}"></script>
+<!-- script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script -->
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+<!-- <script src="http://code.highcharts.com/4.1.1/highcharts-3d.js"></script> -->
+<!-- Empieza el slider. Tomado de http://bootsnipp.com -->
+<script type="text/javascript">
+    (function ($) {
 
-    //Function to animate slider captions 
-    function doAnimations( elems ) {
-		//Cache the animationend event in a variable
-		var animEndEv = 'webkitAnimationEnd animationend';
-		
-		elems.each(function () {
-			var $this = $(this),
-				$animationType = $this.data('animation');
-			$this.addClass($animationType).one(animEndEv, function () {
-				$this.removeClass($animationType);
-			});
-		});
-	}
-	
-	//Variables on page load 
-	var $myCarousel = $('#carousel-example-generic'),
-		$firstAnimatingElems = $myCarousel.find('.item:first').find("[data-animation ^= 'animated']");
-		
-	//Initialize carousel 
-	$myCarousel.carousel();
-	
-	//Animate captions in first slide on page load 
-	doAnimations($firstAnimatingElems);
-	
-	//Pause carousel  
-	$myCarousel.carousel('pause');
-	
-	
-	//Other slides to be animated on carousel slide event 
-	$myCarousel.on('slide.bs.carousel', function (e) {
-		var $animatingElems = $(e.relatedTarget).find("[data-animation ^= 'animated']");
-		doAnimations($animatingElems);
-	});  
-    $('#carousel-example-generic').carousel({
-        interval:4000,
-        pause: "false"
-    });
-	
-})(jQuery);	
+        //Function to animate slider captions
+        function doAnimations(elems) {
+            //Cache the animationend event in a variable
+            var animEndEv = 'webkitAnimationEnd animationend';
 
-
-    </script>
-	<!-- Fin slider -->
-
-
-    <script type="text/javascript">
-			$(document).ready(function() {
-				//responsive menu toggle
-				$("#menutoggle").click(function() {
-					$('.xs-menu').toggleClass('displaynone');
-
-					});
-				//add active class on menu
-				$('#top-menu ul li').click(function(e) {
-					e.preventDefault();
-					$('li').removeClass('active');
-					$(this).addClass('active');
-				});
-			//drop down menu	
-					$(".drop-down").hover(function() {
-						$('.mega-menu').addClass('display-on');
-					});
-					$(".drop-down").mouseleave(function() {
-						$('.mega-menu').removeClass('display-on');
-					});
-			
-			});
-	</script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip({
-            placement : 'top'
+            elems.each(function () {
+                var $this = $(this),
+                    $animationType = $this.data('animation');
+                $this.addClass($animationType).one(animEndEv, function () {
+                    $this.removeClass($animationType);
+                });
             });
+        }
+
+        //Variables on page load
+        var $myCarousel = $('#carousel-example-generic'),
+            $firstAnimatingElems = $myCarousel.find('.item:first').find("[data-animation ^= 'animated']");
+
+        //Initialize carousel
+        $myCarousel.carousel();
+
+        //Animate captions in first slide on page load
+        doAnimations($firstAnimatingElems);
+
+        //Pause carousel
+        $myCarousel.carousel('pause');
+
+
+        //Other slides to be animated on carousel slide event
+        $myCarousel.on('slide.bs.carousel', function (e) {
+            var $animatingElems = $(e.relatedTarget).find("[data-animation ^= 'animated']");
+            doAnimations($animatingElems);
         });
-    </script>
-  </body>
+        $('#carousel-example-generic').carousel({
+            interval: 4000,
+            pause: "false"
+        });
+
+    })(jQuery);
+
+
+</script>
+<!-- Fin slider -->
+
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        //responsive menu toggle
+        $("#menutoggle").click(function () {
+            $('.xs-menu').toggleClass('displaynone');
+
+        });
+        //add active class on menu
+        $('#top-menu ul li').click(function (e) {
+            e.preventDefault();
+            $('li').removeClass('active');
+            $(this).addClass('active');
+        });
+        //drop down menu
+        $(".drop-down").hover(function () {
+            $('.mega-menu').addClass('display-on');
+        });
+        $(".drop-down").mouseleave(function () {
+            $('.mega-menu').removeClass('display-on');
+        });
+
+    });
+</script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip({
+            placement: 'top'
+        });
+    });
+</script>
+</body>
 </html>
